--- a/public/spa.html
+++ b/public/spa.html
@@ -1,6 +1,6 @@
 <html>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
-  <link rel="stylesheet" href="main.css">
+  <link rel="stylesheet" href="/main.css">
   <body>
     <div id='root'>
       Загрузка&hellip;
